--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "0.0.2-alpha"
+version = "1.8.9_0.0.0-alpha"
 group= "com.M4thG33k.m4ththings" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "m4ththings"
 
