Preparing for alpha release

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,4 @@
-apply plugin: 'java'
-compileJava {
-    targetCompatibility = '1.8'
-    sourceCompatibility = '1.8'
-}
+
 
 // For those who want the bleeding edge
 buildscript {
@@ -87,3 +83,5 @@ processResources
 }
 
 
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
