--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-
-
 // For those who want the bleeding edge
 buildscript {
     repositories {
@@ -82,6 +80,7 @@ processResources
     }
 }
 
-
-targetCompatibility = 1.8
-sourceCompatibility = 1.8
+compileJava {
+    targetCompatibility = 1.8
+    sourceCompatibility = 1.8
+}
